# discori-rust

./: .env.example  .gitmodules  Cargo.toml  README.md
src/: commands.rs  database.rs  error.rs  main.rs  models.rs  prelude.rs
src/commands/: explore.rs  home.rs  invite.rs  learn.rs  ping.rs  search.rs  stats.rs
src/database/: extracts.rs  traits.rs  try_froms.rs
src/models/: model_base.rs  results.rs  user.rs
src/utils/: extract.rs
