[package]
name = "discori"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.11"
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.2"
tokio = { version = "1.25", features = ["macros", "signal", "rt-multi-thread"] }
