[package]
name = "discori"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
serenity = "0.11"
tracing = "0.1"
tracing-subscriber = "0.3"

[dependencies.tokio]
version = "1.25"
features = ["macros", "signal", "rt-multi-thread"]
